--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "def attendance_with_friends(advertising):\n",
-    "    r"
+    "    return int((advertising / 2) )"
    ]
   },
   {
