--- a/index.ipynb
+++ b/index.ipynb
@@ -1161,7 +1161,7 @@
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
     "    trace = {'mode': mode, 'name': name}\n",
-    "    trace."
+    "    trace.update(m_b_data(m, b, x_value))"
    ]
   },
   {
