--- a/index.ipynb
+++ b/index.ipynb
@@ -1155,20 +1155,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
     "    trace = {'mode': mode, 'name': name}\n",
-    "    trace.update(m_b_data(m, b, x_value))"
+    "    trace.update(m_b_data(m, b, x_values))\n",
+    "    return trace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mode': 'lines',\n",
+       " 'name': 'line function',\n",
+       " 'x': [0, 50, 100],\n",
+       " 'y': [20.0, 95.0, 170.0]}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m_b_trace(1.5, 20, [0, 50, 100]) \n",
     "# {'mode': 'line', 'name': 'line function', 'x': [0, 50, 100], 'y': [20.0, 95.0, 170.0]}"
