--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1246,8 +1246,7 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    rise = first_show['attendance'] - second_show['attendance']\n",
-    "    run = first_show[]"
+    "    rise = first_show['attendance'] - se"
    ]
   },
   {
