Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1247,7 +1247,8 @@
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    rise = first_show['attendance'] - second_show['attendance']\n",
-    "    run = first_show[]"
+    "    run = first_show['budget'] - second_show['budget']\n",
+    "    return rise / run"
    ]
   },
   {
