--- a/index.ipynb
+++ b/index.ipynb
@@ -1414,7 +1414,8 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    lowest_x_value = sorted_points(x_values, y_values)"
+    "    lowest_x_value = sorted_points(x_values, y_values)[0][0]\n",
+    "    lowest_x"
    ]
   },
   {
