--- a/index.ipynb
+++ b/index.ipynb
@@ -1415,7 +1415,7 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    lowest_x_value = sorted_points(x_values, y_values)[0][0]\n",
-    "    lowest_x"
+    "    lowest_x_y_value = sorted_points()"
    ]
   },
   {
