Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1415,7 +1415,8 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    lowest_x_val = sorted_points(x_values, y_values)[0][0]\n",
-    "    lowest_y_val = sorted_points(x_)"
+    "    lowest_y_val = sorted_points(x_values, y_values)[0][1]\n",
+    "    highest_x_"
    ]
   },
   {
