--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1416,8 +1416,7 @@
     "def slope(x_values, y_values):\n",
     "    lowest_x_val = sorted_points(x_values, y_values)[0][0]\n",
     "    lowest_y_val = sorted_points(x_values, y_values)[0][1]\n",
-    "    highest_x_val = sorted_points(x_values, y_values)[-1][0]\n",
-    "    "
+    "    highest_x_"
    ]
   },
   {
