--- a/index.ipynb
+++ b/index.ipynb
@@ -1417,7 +1417,8 @@
     "    lowest_x_val = sorted_points(x_values, y_values)[0][0]\n",
     "    lowest_y_val = sorted_points(x_values, y_values)[0][1]\n",
     "    highest_x_val = sorted_points(x_values, y_values)[-1][0]\n",
-    "    highest_y_val = sorted_points(x_values, y_values)"
+    "    highest_y_val = sorted_points(x_values, y_values)[-1][1]\n",
+    "    return "
    ]
   },
   {
