Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1418,7 +1418,7 @@
     "    lowest_y_val = sorted_points(x_values, y_values)[0][1]\n",
     "    highest_x_val = sorted_points(x_values, y_values)[-1][0]\n",
     "    highest_y_val = sorted_points(x_values, y_values)[-1][1]\n",
-    "    return "
+    "    return ()"
    ]
   },
   {
