Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1418,14 +1418,25 @@
     "    lowest_y_val = sorted_points(x_values, y_values)[0][1]\n",
     "    highest_x_val = sorted_points(x_values, y_values)[-1][0]\n",
     "    highest_y_val = sorted_points(x_values, y_values)[-1][1]\n",
-    "    return (highest_y_val - lowest_y_val) / (highest_x_val )"
+    "    return (highest_y_val - lowest_y_val) / (highest_x_val - lowest_x_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "slope([200, 400], [400, 700]) # 1.5"
    ]
