--- a/index.ipynb
+++ b/index.ipynb
@@ -1456,7 +1456,8 @@
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
     "    #b = y - mx\n",
-    "    y_value = y_values"
+    "    y_value = y_values[0]\n",
+    "    x_value = "
    ]
   },
   {
