Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1457,7 +1457,8 @@
     "def y_intercept(x_values, y_values, m = None):\n",
     "    #b = y - mx\n",
     "    y_value = y_values[0]\n",
-    "    x_value = "
+    "    x_value = x_values[0]\n",
+    "    if m == n"
    ]
   },
   {
