Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1458,7 +1458,8 @@
     "    #b = y - mx\n",
     "    y_value = y_values[0]\n",
     "    x_value = x_values[0]\n",
-    "    if m == n"
+    "    if m == None:\n",
+    "        slope = "
    ]
   },
   {
