--- a/index.ipynb
+++ b/index.ipynb
@@ -1460,7 +1460,9 @@
     "    x_value = x_values[0]\n",
     "    if m == None:\n",
     "        slope = slope(x_values, y_values)\n",
-    "    else:"
+    "    else:\n",
+    "        slope = m\n",
+    "    return y_value"
    ]
   },
   {
