--- a/index.ipynb
+++ b/index.ipynb
@@ -1460,7 +1460,7 @@
     "    x_value = x_values[0]\n",
     "    if m == None:\n",
     "        m = slope(x_values, y_values)\n",
-    "    return int(y_value - (x_value * m))"
+    "    return inty_value - (x_value * m))"
    ]
   },
   {
@@ -1514,20 +1514,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_starting_line(x_values, y_values):\n",
-    "    return {'b': y_intercept(x_values, y_values), 'm': slope()}\n",
+    "    return {'b': y_intercept(x_values, y_values), 'm': slope(x_values, y_values)}\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'b': 10, 'm': 1.725}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "build_starting_line([0, 200, 400], [10, 400, 700]) # {'b': 10.0, 'm': 1.725}"
    ]
