--- a/index.ipynb
+++ b/index.ipynb
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1460,21 +1460,21 @@
     "    x_value = x_values[0]\n",
     "    if m == None:\n",
     "        m = slope(x_values, y_values)\n",
-    "    return inty_value - (x_value * m))"
+    "    return y_value - (x_value * m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100"
+       "100.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -1493,10 +1493,10 @@
     {
      "data": {
       "text/plain": [
-       "10"
+       "10.0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1514,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1525,16 +1525,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'b': 10, 'm': 1.725}"
+       "{'b': 10.0, 'm': 1.725}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
