--- a/index.ipynb
+++ b/index.ipynb
@@ -1564,20 +1564,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
     "    #y = mx + b\n",
-    "    return slope"
+    "    return m * x_value + b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "250.0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "expected_value_for_line(1.5, 100, 100) # 250"
    ]
